--- a/SimpleStorage/package.json
+++ b/SimpleStorage/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "beginner-blockchain-apps",
+  "name": "simplestorage",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "truffle-config.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {},
   "keywords": [],
   "author": "",
